Update sourabh_bajaj_resume.tex (#11)
* Update sourabh_bajaj_resume.tex

* Update sourabh_bajaj_resume.tex

--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -15,7 +15,7 @@
 \usepackage{enumitem}
 \usepackage[hidelinks]{hyperref}
 \usepackage{fancyhdr}
-
+\usepackage[english]{babel}
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
