fix typos in .tex file (#70)
Co-authored-by: flowrolltide <146706527+flowrolltide@users.noreply.github.com>

--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -1,5 +1,5 @@
 %-------------------------
-% Resume in Latex
+% Resume in LateX
 % Author : Sourabh Bajaj
 % License : MIT
 %------------------------
@@ -20,7 +20,7 @@
 \input{glyphtounicode}
 
 \pagestyle{fancy}
-\fancyhf{} % clear all header and footer fields
+\fancyhf{} % Clear all header and footer fields
 \fancyfoot{}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
@@ -43,7 +43,7 @@
   \vspace{-4pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
-% Ensure that generate pdf is machine readable/ATS parsable
+% Ensure that generate PDF is machine readable/ATS parsable
 \pdfgentounicode=1
 
 %-------------------------
@@ -93,8 +93,8 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-  \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : \href{tel:+11234567890}{+1-123-456-7890} \\
+  \textbf{\href{https://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email: \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
+  \href{https://sourabhbajaj.com/}{sourabhbajaj.com} & Mobile: \href{tel:+11234567890}{+1-123-456-7890} \\
 \end{tabular*}
 
 
@@ -103,10 +103,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Georgia Institute of Technology}{Atlanta, GA}
-      {Master of Science in Computer Science;  GPA: 4.00}{Aug. 2012 -- Dec. 2013}
+      {Master of Science in Computer Science; GPA: 4.00}{Aug 2012 -- Dec 2013}
     \resumeSubheading
       {Birla Institute of Technology and Science}{Pilani, India}
-      {Bachelor of Engineering in Electrical and Electronics;  GPA: 3.66 (9.15/10.0)}{Aug. 2008 -- July. 2012}
+      {Bachelor of Engineering in Electrical and Electronics; GPA: 3.66 (9.15/10.0)}{Aug 2008 -- July 2012}
   \resumeSubHeadingListEnd
 
 
@@ -116,9 +116,9 @@
 
     \resumeSubheading
       {Google}{Mountain View, CA}
-      {Software Engineer}{Oct 2016 - Present}
+      {Software Engineer}{Oct 2016 -- Present}
       \resumeItemListStart
-        \resumeItem{Tensorflow}
+        \resumeItem{TensorFlow}
           {TensorFlow is an open source software library for numerical computation using data flow graphs; primarily used for training deep learning models. Worked on APIs and performance for training models on Tensor Processing Units (TPU).}
         \resumeItem{Apache Beam}
           {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines, as well as a set of language-specific SDKs for constructing pipelines and runners.}
@@ -126,7 +126,7 @@
       
 % --------Multiple Positions Heading------------
   %  \resumeSubSubheading
-  %   {Software Engineer I}{Oct 2014 - Sep 2016}
+  %   {Software Engineer I}{Oct 2014 -- Sep 2016}
   %   \resumeItemListStart
   %      \resumeItem{Apache Beam}
   %        {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
@@ -136,7 +136,7 @@
 
     \resumeSubheading
       {Coursera}{Mountain View, CA}
-      {Senior Software Engineer}{Jan 2014 - Oct 2016}
+      {Senior Software Engineer}{Jan 2014 -- Oct 2016}
       \resumeItemListStart
         \resumeItem{Notifications}
           {Service for sending email, push and in-app notifications. Involved in features such as delivery time optimization, tracking, queuing and A/B testing. Built an internal app to run batch campaigns for marketing etc.}
@@ -145,15 +145,15 @@
         \resumeItem{Workflows}
           {Dataduct an open source workflow framework to create and manage data pipelines leveraging reusables patterns to expedite developer productivity.}
         \resumeItem{Data Collection}
-          {Designed the internal survey and crowd sourcing platform which allowed for creating various tasks for crowd sourcing or embedding surveys across the Coursera platform.}
+          {Designed the internal survey and crowdsourcing platform which allowed for creating various tasks for crowdsourcing or embedding surveys across the Coursera platform.}
         \resumeItem{Dev Environment}
-          {Analytics environment based on docker and AWS, standardized the python and R dependencies. Wrote the core libraries that are shared by all data scientists.}
+          {Analytics environment based on Docker and AWS, standardized the Python and R dependencies. Wrote the core libraries that are shared by all data scientists.}
         \resumeItem{Data Warehousing}
           {Setup, schema design and management of Amazon Redshift. Built an internal app for access to the data using a web interface. Dataduct integration for daily ETL injection into Redshift.}
         \resumeItem{Recommendations}
           {Core service for all recommendation systems at Coursera, currently used on the homepage and throughout the content discovery process. Worked on both offline training and online serving.}
         \resumeItem{Content Discovery}
-          {Improved content discovery by building a new onboarding experience on coursera. Using this to personalize the search and browse experience. Also worked on ranking and indexing improvements.}
+          {Improved content discovery by building a new onboarding experience on coursera. Used this to personalize the search and browse experience. Also worked on ranking and indexing improvements.}
         \resumeItem{Course Dashboards}
           {Instructor dashboards and learner surveying tools, which helped instructors run their class better by providing data on Assignments and Learner Activity.}
       \resumeItemListEnd
@@ -163,18 +163,18 @@
       {Data Scientist}{Summer 2012 and 2013}
       \resumeItemListStart
         \resumeItem{Portfolio Management}
-          {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
+          {Created models for portfolio hedging, portfolio optimization and price forecasting. Also created a strategy backtesting engine used for simulating and backtesting strategies.}
         \resumeItem{QuantDesk}
           {Python backend for a web application used by hedge fund managers for portfolio management.}
       \resumeItemListEnd
 
     \resumeSubheading
       {Georgia Institute of Technology}{Atlanta, GA}
-      {Research and Teaching Assistant}{Jan 2012 - Dec 2013}
+      {Research and Teaching Assistant}{Jan 2012 -- Dec 2013}
       \resumeItemListStart
-        \resumeItem{Research Assistant - Machine Learning}
-          {Research on machine learning for portfolio hedging and replication algorithms. Modeling low-risk \& continuous-return strategies. Developed the python library QSTK.}
-        \resumeItem{Teaching Assistant - Computational Investing}
+        \resumeItem{Research Assistant -- Machine Learning}
+          {Research on machine learning for portfolio hedging and replication algorithms. Modeling low-risk \& continuous-return strategies. Developed the Python library QSTK.}
+        \resumeItem{Teaching Assistant -- Computational Investing}
           {The online course on Coursera, had more than 100,000 students enrolled. It was featured on the 11 Alive News and the Atlanta Journal Constitution. Involved in creating assignment, exams and conducting recitation sessions. Also taught the on-campus version of the course.}
       \resumeItemListEnd
 
@@ -185,21 +185,21 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{QuantSoftware Toolkit}
-      {Open source python library for financial data analysis and machine learning for finance.}
-    \resumeSubItem{Github Visualization}
-      {Data Visualization of Git Log data using D3 to analyze project trends over time.}
+      {Open source Python library for financial data analysis and machine learning for finance.}
+    \resumeSubItem{GitHub Visualization}
+      {Data visualization of Git log data using D3 to analyze project trends over time.}
     \resumeSubItem{Recommendation System}
-      {Music and Movie recommender systems using collaborative filtering on public datasets.}
+      {Music and movie recommender systems using collaborative filtering on public datasets.}
     \resumeSubItem{Mac Setup}
-      {Book that gives step by step instructions on setting up developer environment on Mac OS.}
+      {Book that gives step-by-step instructions on setting up developer environment on macOS.}
   \resumeSubHeadingListEnd
 
 %
-%--------PROGRAMMING SKILLS------------
-%\section{Programming Skills}
+%--------SKILLS------------
+%\section{Skills}
 %  \resumeSubHeadingListStart
 %    \item{
-%      \textbf{Languages}{: Scala, Python, Javascript, C++, SQL, Java}
+%      \textbf{Languages}{: Scala, Python, JavaScript, C++, SQL, Java}
 %      \hfill
 %      \textbf{Technologies}{: AWS, Play, React, Kafka, GCE}
 %    }
