chore: change github username

--- a/en/aymaneelmaini_resume.tex
+++ b/en/aymaneelmaini_resume.tex
@@ -1,7 +1,7 @@
 %-------------------------
 % Resume in Latex
 % Author : Aymane El Maini
-% My Version: https://github.com/AymaneTech/resume
+% My Version: https://github.com/aymaneelmaini/resume
 % Original Template: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -81,7 +81,7 @@
 \vspace{2pt}
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \href{https://github.com/AymaneTech}{github.com/AymaneTech} &
+  \href{https://github.com/aymaneelmaini}{github.com/aymaneelmaini} &
   \href{mailto:elmainiaymane03@gmail.com}{elmainiaymane03@gmail.com} \\
   \href{https://linkedin.com/in/aymane-el-maini}{linkedin.com/in/aymane-el-maini} &
   Mobile: +212-714-934-362 \\
@@ -136,11 +136,11 @@
 %-----------PROJECTS-----------------
 \section{Projects}
 \resumeSubHeadingListStart
-  \resumeSubItem{\href{https://github.com/AymaneTech/klox}{Klox — Java Interpreter}}
+  \resumeSubItem{\href{https://github.com/aymaneelmaini/klox}{Klox — Java Interpreter}}
     {Tree-walk interpreter implemented in Kotlin following Crafting Interpreters. Supports variables, control flow, functions, closures, and class-based OOP.}
-  \resumeSubItem{\href{https://github.com/aymanetech/clox}{Clox — C Interpreter}}
+  \resumeSubItem{\href{https://github.com/aymaneelmaini/clox}{Clox — C Interpreter}}
     {Bytecode compiler and stack-based virtual machine written in C. Covers tokenization, compilation, execution, heap allocation, and garbage collection. Tested using Criterion.}
-  \resumeSubItem{\href{https://github.com/AymaneTech/linkupp}{LinkUp — Friend Matching Platform}}
+  \resumeSubItem{\href{https://github.com/aymaneelmaini/linkupp}{LinkUp — Friend Matching Platform}}
     {Spring Boot and Kotlin backend using DDD and functional core imperative shell architecture. PostgreSQL, Docker, GitHub Actions CI/CD, and React Native mobile application. Tested with Kotest}
 \resumeSubHeadingListEnd
 
