--- a/fr/aymaneelmaini_resume.tex
+++ b/fr/aymaneelmaini_resume.tex
@@ -1,7 +1,7 @@
 %-------------------------
 % CV en Latex
 % Auteur : Aymane El Maini
-% Version : https://github.com/AymaneTech/resume
+% Version : https://github.com/aymaneelmaini/resume
 % Modèle original : https://github.com/sb2nov/resume
 % Licence : MIT
 %------------------------
@@ -81,7 +81,7 @@
 \vspace{2pt}
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \href{https://github.com/AymaneTech}{github.com/AymaneTech} &
+  \href{https://github.com/aymaneelmaini}{github.com/aymaneelmaini} &
   \href{mailto:elmainiaymane03@gmail.com}{elmainiaymane03@gmail.com} \\
   \href{https://linkedin.com/in/aymane-el-maini}{linkedin.com/in/aymane-el-maini} &
   Mobile : +212-714-934-362 \\
@@ -136,11 +136,11 @@
 %-----------PROJETS-----------------
 \section{Projets}
 \resumeSubHeadingListStart
-  \resumeSubItem{\href{https://github.com/AymaneTech/klox}{Klox — Interpréteur Java}}
+  \resumeSubItem{\href{https://github.com/aymaneelmaini/klox}{Klox — Interpréteur Java}}
     {Interpréteur de type tree-walk implémenté en Kotlin, basé sur l’ouvrage Crafting Interpreters. Support des variables, structures de contrôle, fonctions, fermetures et POO.}
-  \resumeSubItem{\href{https://github.com/aymanetech/clox}{Clox — Interpréteur en C}}
+  \resumeSubItem{\href{https://github.com/aymaneelmaini/clox}{Clox — Interpréteur en C}}
     {Compilateur bytecode et machine virtuelle à pile écrits en C, couvrant la tokenisation, la compilation, l’exécution, l’allocation mémoire et le garbage collector. Tests réalisés avec Criterion.}
-  \resumeSubItem{\href{https://github.com/AymaneTech/linkupp}{LinkUp — Plateforme de mise en relation}}
+  \resumeSubItem{\href{https://github.com/aymaneelmaini/linkupp}{LinkUp — Plateforme de mise en relation}}
     {Backend Spring Boot et Kotlin basé sur le DDD et une architecture functional core / imperative shell. PostgreSQL, Docker, CI/CD GitHub Actions et application mobile React Native. Tests avec Kotest.}
 \resumeSubHeadingListEnd
 
